src/log_level_re.cc
/* Generated by re2c 4.5 on Wed Sep 30 13:21:12 2026 */
#line 1 "../../lnav/src/log_level_re.re"
/**
 * Copyright (c) 2018, Timothy Stack
 *
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * * Redistributions of source code must retain the above copyright notice, this
 * list of conditions and the following disclaimer.
 * * Redistributions in binary form must reproduce the above copyright notice,
 * this list of conditions and the following disclaimer in the documentation
 * and/or other materials provided with the distribution.
 * * Neither the name of Timothy Stack nor the names of its contributors
 * may be used to endorse or promote products derived from this software
 * without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ''AS IS'' AND ANY
 * EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
 * ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

#include "config.h"

#include <string.h>

#include "log_level.hh"

log_level_t string2level(const char *levelstr, ssize_t len, bool exact)
{
    log_level_t retval = LEVEL_UNKNOWN;

    if (len == (ssize_t)-1) {
        len = strlen(levelstr);
    }

    if (((len == 1) || ((len > 1) && (levelstr[1] == ' '))) &&
        (retval = abbrev2level(levelstr, 1)) != LEVEL_UNKNOWN) {
        return retval;
    }

#   define YYCTYPE unsigned char
#   define RET(tok) { \
        return tok; \
    }

    const YYCTYPE *YYCURSOR = (const unsigned char *) levelstr;
    const YYCTYPE *YYLIMIT = (const unsigned char *) levelstr + len;
    const YYCTYPE *YYMARKER = YYCURSOR;
    const YYCTYPE *debug_level = nullptr;

#   define YYPEEK()    (YYCURSOR < YYLIMIT ? *YYCURSOR : 0)
#   define YYSKIP()    ++YYCURSOR
#   define YYBACKUP()  YYMARKER = YYCURSOR
#   define YYRESTORE() YYCURSOR = YYMARKER
#   define YYSTAGP(x)  x = YYCURSOR - 1

    
#line 69 "../../lnav/src/log_level_re.cc"
#line 65 "../../lnav/src/log_level_re.re"

    loop:
    
#line 74 "../../lnav/src/log_level_re.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	yych = YYPEEK();
	switch (yych) {
		case 0x00: goto yy1;
		case 'A':
		case 'a': goto yy4;
		case 'C':
		case 'c': goto yy5;
		case 'D':
		case 'd': goto yy6;
		case 'E':
		case 'e': goto yy7;
		case 'F':
		case 'f': goto yy8;
		case 'H':
		case 'h': goto yy9;
		case 'I':
		case 'i': goto yy10;
		case 'L':
		case 'l': goto yy11;
		case 'N':
		case 'n': goto yy12;
		case 'S':
		case 's': goto yy13;
		case 'T':
		case 't': goto yy14;
		case 'V':
		case 'v': goto yy15;
		case 'W':
		case 'w': goto yy16;
		default: goto yy2;
	}
yy1:
	YYSKIP();
#line 74 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_UNKNOWN); }
#line 113 "../../lnav/src/log_level_re.cc"
yy2:
	YYSKIP();
yy3:
#line 102 "../../lnav/src/log_level_re.re"
	{ goto loop; }
#line 119 "../../lnav/src/log_level_re.cc"
yy4:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'L') goto yy17;
	if (yych == 'l') goto yy17;
	goto yy3;
yy5:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'R') goto yy19;
	if (yych == 'r') goto yy19;
	goto yy3;
yy6:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'E') goto yy20;
	if (yych == 'e') goto yy20;
	goto yy3;
yy7:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych <= 'R') {
		if (yych == 'M') goto yy21;
		if (yych <= 'Q') goto yy3;
		goto yy22;
	} else {
		if (yych <= 'm') {
			if (yych <= 'l') goto yy3;
			goto yy21;
		} else {
			if (yych == 'r') goto yy22;
			goto yy3;
		}
	}
yy8:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'A') goto yy23;
	if (yych == 'a') goto yy23;
	goto yy3;
yy9:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'E') goto yy24;
	if (yych == 'e') goto yy24;
	goto yy3;
yy10:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'N') goto yy25;
	if (yych == 'n') goto yy25;
	goto yy3;
yy11:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'O') goto yy26;
	if (yych == 'o') goto yy26;
	goto yy3;
yy12:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'O') goto yy27;
	if (yych == 'o') goto yy27;
	goto yy3;
yy13:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych <= 'Y') {
		if (yych <= 'S') {
			if (yych == 'E') goto yy28;
			goto yy3;
		} else {
			if (yych <= 'T') goto yy29;
			if (yych <= 'X') goto yy3;
			goto yy30;
		}
	} else {
		if (yych <= 's') {
			if (yych == 'e') goto yy28;
			goto yy3;
		} else {
			if (yych <= 't') goto yy29;
			if (yych == 'y') goto yy30;
			goto yy3;
		}
	}
yy14:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'R') goto yy31;
	if (yych == 'r') goto yy31;
	goto yy3;
yy15:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'E') goto yy32;
	if (yych == 'e') goto yy32;
	goto yy3;
yy16:
	yyaccept = 0;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'A') goto yy33;
	if (yych == 'a') goto yy33;
	goto yy3;
yy17:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy34;
	if (yych == 'e') goto yy34;
yy18:
	YYRESTORE();
	if (yyaccept <= 1) {
		if (yyaccept == 0) goto yy3;
		else goto yy40;
	} else {
		goto yy72;
	}
yy19:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'I') goto yy35;
	if (yych == 'i') goto yy35;
	goto yy18;
yy20:
	YYSKIP();
	yych = YYPEEK();
	if (yych <= 'P') {
		if (yych == 'B') goto yy36;
		if (yych <= 'O') goto yy18;
		goto yy37;
	} else {
		if (yych <= 'b') {
			if (yych <= 'a') goto yy18;
			goto yy36;
		} else {
			if (yych == 'p') goto yy37;
			goto yy18;
		}
	}
yy21:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy38;
	if (yych == 'e') goto yy38;
	goto yy18;
yy22:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy39;
	if (yych == 'r') goto yy39;
	goto yy18;
yy23:
	YYSKIP();
	yych = YYPEEK();
	if (yych <= 'T') {
		if (yych == 'I') goto yy41;
		if (yych <= 'S') goto yy18;
		goto yy42;
	} else {
		if (yych <= 'i') {
			if (yych <= 'h') goto yy18;
			goto yy41;
		} else {
			if (yych == 't') goto yy42;
			goto yy18;
		}
	}
yy24:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'A') goto yy43;
	if (yych == 'a') goto yy43;
	goto yy18;
yy25:
	YYSKIP();
	yych = YYPEEK();
	if (yych <= 'V') {
		if (yych == 'F') goto yy44;
		if (yych <= 'U') goto yy18;
		goto yy45;
	} else {
		if (yych <= 'f') {
			if (yych <= 'e') goto yy18;
			goto yy44;
		} else {
			if (yych == 'v') goto yy45;
			goto yy18;
		}
	}
yy26:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'G') goto yy46;
	if (yych == 'g') goto yy46;
	goto yy18;
yy27:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'T') goto yy47;
	if (yych == 't') goto yy47;
	goto yy18;
yy28:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'V') goto yy48;
	if (yych == 'v') goto yy48;
	goto yy18;
yy29:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'A') goto yy49;
	if (yych == 'a') goto yy49;
	goto yy18;
yy30:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'S') goto yy50;
	if (yych == 's') goto yy50;
	goto yy18;
yy31:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'A') goto yy51;
	if (yych == 'a') goto yy51;
	goto yy18;
yy32:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy52;
	if (yych == 'r') goto yy52;
	goto yy18;
yy33:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy53;
	if (yych == 'r') goto yy53;
	goto yy18;
yy34:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy54;
	if (yych == 'r') goto yy54;
	goto yy18;
yy35:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'T') goto yy55;
	if (yych == 't') goto yy55;
	goto yy18;
yy36:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'U') goto yy56;
	if (yych == 'u') goto yy56;
	goto yy18;
yy37:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy57;
	if (yych == 'r') goto yy57;
	goto yy18;
yy38:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy58;
	if (yych == 'r') goto yy58;
	goto yy18;
yy39:
	yyaccept = 1;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'O') goto yy59;
	if (yych == 'o') goto yy59;
yy40:
#line 97 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_ERROR); }
#line 423 "../../lnav/src/log_level_re.cc"
yy41:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'L') goto yy60;
	if (yych == 'l') goto yy60;
	goto yy18;
yy42:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'A') goto yy61;
	if (yych == 'a') goto yy61;
	goto yy18;
yy43:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'D') goto yy62;
	if (yych == 'd') goto yy62;
	goto yy18;
yy44:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'O') goto yy63;
	if (yych == 'o') goto yy63;
	goto yy18;
yy45:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'A') goto yy64;
	if (yych == 'a') goto yy64;
	goto yy18;
yy46:
	YYSKIP();
#line 94 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_NOTICE); }
#line 458 "../../lnav/src/log_level_re.cc"
yy47:
	YYSKIP();
	yych = YYPEEK();
	if (yych <= 'I') {
		if (yych == 'E') goto yy46;
		if (yych <= 'H') goto yy18;
		goto yy65;
	} else {
		if (yych <= 'e') {
			if (yych <= 'd') goto yy18;
			goto yy46;
		} else {
			if (yych == 'i') goto yy65;
			goto yy18;
		}
	}
yy48:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy66;
	if (yych == 'e') goto yy66;
	goto yy18;
yy49:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'T') goto yy67;
	if (yych == 't') goto yy67;
	goto yy18;
yy50:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'T') goto yy68;
	if (yych == 't') goto yy68;
	goto yy18;
yy51:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'C') goto yy69;
	if (yych == 'c') goto yy69;
	goto yy18;
yy52:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'B') goto yy70;
	if (yych == 'b') goto yy70;
	goto yy18;
yy53:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'N') goto yy71;
	if (yych == 'n') goto yy71;
	goto yy18;
yy54:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'T') goto yy73;
	if (yych == 't') goto yy73;
	goto yy18;
yy55:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'I') goto yy74;
	if (yych == 'i') goto yy74;
	goto yy18;
yy56:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'G') goto yy75;
	if (yych == 'g') goto yy75;
	goto yy18;
yy57:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy77;
	if (yych == 'e') goto yy77;
	goto yy18;
yy58:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'G') goto yy78;
	if (yych == 'g') goto yy78;
	goto yy18;
yy59:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy60;
	if (yych != 'r') goto yy18;
yy60:
	YYSKIP();
	goto yy40;
yy61:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'L') goto yy79;
	if (yych == 'l') goto yy79;
	goto yy18;
yy62:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy80;
	if (yych == 'e') goto yy80;
	goto yy18;
yy63:
	YYSKIP();
#line 93 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_INFO); }
#line 565 "../../lnav/src/log_level_re.cc"
yy64:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'L') goto yy81;
	if (yych == 'l') goto yy81;
	goto yy18;
yy65:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'C') goto yy82;
	if (yych == 'c') goto yy82;
	goto yy18;
yy66:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy83;
	if (yych == 'r') goto yy83;
	goto yy18;
yy67:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'S') goto yy84;
	if (yych == 's') goto yy84;
	goto yy18;
yy68:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy85;
	if (yych == 'e') goto yy85;
	goto yy18;
yy69:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy86;
	if (yych == 'e') goto yy86;
	goto yy18;
yy70:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'O') goto yy87;
	if (yych == 'o') goto yy87;
	goto yy18;
yy71:
	yyaccept = 2;
	YYSKIP();
	YYBACKUP();
	yych = YYPEEK();
	if (yych == 'I') goto yy88;
	if (yych == 'i') goto yy88;
yy72:
#line 96 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_WARNING); }
#line 618 "../../lnav/src/log_level_re.cc"
yy73:
	YYSKIP();
#line 98 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_CRITICAL); }
#line 623 "../../lnav/src/log_level_re.cc"
yy74:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'C') goto yy89;
	if (yych == 'c') goto yy89;
	goto yy18;
yy75:
	YYSKIP();
	yych = YYPEEK();
	if (yych <= '1') goto yy76;
	if (yych <= '5') goto yy90;
yy76:
	YYSTAGP(debug_level);
#line 76 "../../lnav/src/log_level_re.re"
	{
         if (debug_level == nullptr) {
             RET(LEVEL_DEBUG);
         }
         switch (*debug_level) {
         case '2':
             RET(LEVEL_DEBUG2);
         case '3':
             RET(LEVEL_DEBUG3);
         case '4':
             RET(LEVEL_DEBUG4);
         case '5':
             RET(LEVEL_DEBUG5);
         default:
             RET(LEVEL_DEBUG);
         }
     }
#line 655 "../../lnav/src/log_level_re.cc"
yy77:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'C') goto yy91;
	if (yych == 'c') goto yy91;
	goto yy18;
yy78:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy92;
	if (yych == 'e') goto yy92;
	goto yy18;
yy79:
	YYSKIP();
#line 99 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_FATAL); }
#line 672 "../../lnav/src/log_level_re.cc"
yy80:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'R') goto yy93;
	if (yych == 'r') goto yy93;
	goto yy18;
yy81:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'I') goto yy94;
	if (yych == 'i') goto yy94;
	goto yy18;
yy82:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy46;
	if (yych == 'e') goto yy46;
	goto yy18;
yy83:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'E') goto yy73;
	if (yych == 'e') goto yy73;
	goto yy18;
yy84:
	YYSKIP();
#line 95 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_STATS); }
#line 701 "../../lnav/src/log_level_re.cc"
yy85:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'M') goto yy63;
	if (yych == 'm') goto yy63;
	goto yy18;
yy86:
	YYSKIP();
#line 75 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_TRACE); }
#line 712 "../../lnav/src/log_level_re.cc"
yy87:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'S') goto yy69;
	if (yych == 's') goto yy69;
	goto yy18;
yy88:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'N') goto yy95;
	if (yych == 'n') goto yy95;
	goto yy18;
yy89:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'A') goto yy96;
	if (yych == 'a') goto yy96;
	goto yy18;
yy90:
	YYSKIP();
	goto yy76;
yy91:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'A') goto yy97;
	if (yych == 'a') goto yy97;
	goto yy18;
yy92:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'N') goto yy98;
	if (yych == 'n') goto yy98;
	goto yy18;
yy93:
	YYSKIP();
#line 101 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_HEADER); }
#line 750 "../../lnav/src/log_level_re.cc"
yy94:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'D') goto yy99;
	if (yych == 'd') goto yy99;
	goto yy18;
yy95:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'G') goto yy100;
	if (yych == 'g') goto yy100;
	goto yy18;
yy96:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'L') goto yy73;
	if (yych == 'l') goto yy73;
	goto yy18;
yy97:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'T') goto yy101;
	if (yych == 't') goto yy101;
	goto yy18;
yy98:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'C') goto yy102;
	if (yych == 'c') goto yy102;
	goto yy18;
yy99:
	YYSKIP();
#line 100 "../../lnav/src/log_level_re.re"
	{ RET(LEVEL_INVALID); }
#line 785 "../../lnav/src/log_level_re.cc"
yy100:
	YYSKIP();
	goto yy72;
yy101:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'I') goto yy103;
	if (yych == 'i') goto yy103;
	goto yy18;
yy102:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'Y') goto yy79;
	if (yych == 'y') goto yy79;
	goto yy18;
yy103:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'O') goto yy104;
	if (yych != 'o') goto yy18;
yy104:
	YYSKIP();
	yych = YYPEEK();
	if (yych == 'N') goto yy100;
	if (yych == 'n') goto yy100;
	goto yy18;
}
#line 104 "../../lnav/src/log_level_re.re"

}
